--- a/app/src/main/res/layout/activity_drawing.xml
+++ b/app/src/main/res/layout/activity_drawing.xml
@@ -9,36 +9,46 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="-64dp"
+        tools:layout_editor_absoluteY="311dp">
 
         <SeekBar
             android:id="@+id/seekBarM"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:max="5"
             tools:layout_editor_absoluteX="66dp"
             tools:layout_editor_absoluteY="0dp" />
+
         <SeekBar
             android:id="@+id/seekBarB"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:max="2000"
+            android:progress="0"
             tools:layout_editor_absoluteX="66dp"
             tools:layout_editor_absoluteY="0dp" />
+
+        <Button
+            android:id="@+id/getWeb"
+            android:layout_width="wrap_content"
+            android:layout_height="34dp"
+            android:layout_gravity="center"
+            android:text="get Web"/>
+        <Button
+            android:id="@+id/buttton"
+            android:layout_width="wrap_content"
+            android:layout_height="34dp"
+            android:layout_gravity="center"
+            android:text="Reset"
+
+            />
 
         <LinearLayout
             android:id="@+id/customViewLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-        </LinearLayout>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="34dp"
-            android:id="@+id/buttton"
-            android:layout_gravity="center"
-            android:text="Web"
-
-            />
-" />
+            android:layout_height="657dp"
+            android:orientation="vertical"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
